<resources>
    <string name="app_name">Styleology</string>

    <!-- common usage text -->
    <string name="common_text_accept">Accept</string>
    <string name="common_text_confirm">Confirm</string>
    <string name="common_text_cancel">Cancel</string>
    <string name="common_text_add">Add</string>
    <string name="common_text_ok">Ok</string>

    <!-- Actionbar screen text -->
    <string name="log_out">Log out</string>

    <!-- main activity screen text -->
    <string name="actionbar_addItemMenu">Add Item</string>
    <string name="actionbar_settingMenu">Setting</string>
    <string name="dialog_end_app_title">Finish the app</string>
    <string name="dialog_end_app_description">Do you want to finish the app?</string>
    <string name="dialog_end_app_ok">OK</string>
    <string name="dialog_end_app_cancel">Cancel</string>

    <string name="items_text">Items</string>
    <string name="outfits_text">Outfits</string>
    <string name="wardrobe_stats_text">Wardrobe Stats</string>
    <string name="planner_text">Planner</string>
    <string name="consultations_text">Consultations</string>
    <string name="sign_in_text">Sign In</string>

    <!-- FashionItem activities text -->
    <string name="input_item_name">Input Item Name</string>
    <string name="input_item_desc">Input Item Description</string>
    <string name="input_item_category">Input Item Category</string>
    <string name="input_item_color">Input Item Color</string>
    <string name="input_item_fabric">Input Item Fabric</string>
    <string name="input_item_price">Input Item Price</string>
    <string name="input_item_size">Input Item size</string>
    <string name="input_item_season">Input Item Season</string>
    <string name="input_item_brand">Input Item Brand</string>
    <string name="input_item_Location">Input Item Location</string>

    <!-- OutfitItems activities text -->
    <string name="recommended_outfits">Recommended Outfits</string>

    <!-- UserAccount activities text -->
    <string name="input_user_id">Input ID</string>
    <string name="input_username">Username</string>
    <string name="input_user_pw">Input Password</string>
    <string name="input_password">Password</string>
    <string name="input_user_name">Input name</string>
    <string name="input_name">Name</string>
    <string name="input_user_email">Input email</string>
    <string name="input_email">Email</string>

    <!-- Planner activities text -->
    <string name="button_last_month">Last month</string>
    <string name="button_next_month">Next month</string>
    <string name="button_today_month">Month of today</string>
    <string name="spinner_year">Select year</string>
    <string name="spinner_month">Select month</string>
    <string name="weekday0">Sun</string>
    <string name="weekday1">Mon</string>
    <string name="weekday2">Tue</string>
    <string name="weekday3">Wed</string>
    <string name="weekday4">Thu</string>
    <string name="weekday5">Fri</string>
    <string name="weekday6">Sat</string>
    <string-array name="month_name">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="button_last_day">Last day</string>
    <string name="button_next_day">Next day</string>
    <string name="button_today_day">Today</string>
    <string name="plan_description">Plan Description</string>
    <string name="plan_content">Plan Content</string>
    <string name="plan_image">Plan Image</string>
    <string name="button_add_plan">Planning your day</string>
    <string name="hint_event_description">e.g. Dinner</string>
    <string name="title_event_description">Description of event</string>
    <string name="title_event_date">Date of event</string>
    <string name="title_event_date_format">e.g. YYYY-MM-DD</string>
    <string name="title_event_outfits">Outfits</string>
    <string name="title_event_fashion_items">Fashion items</string>

    <!-- toast message text -->
    <string name="toast_cannot_find_id">Cannot find your ID. Try it again.</string>
    <string name="toast_succeed_to_login">Succeed to login</string>
    <string name="toast_clicks_left">clicks left</string>
    <string name="toast_succeed_to_create_demo_data">Succeed to create Demo data</string>
    <string name="toast_input_data_is_wrong">Input data is wrong. Please input correct data.</string>
    <string name="toast_succeed_to_update_your_account">Succeed to update your account.</string>
    <string name="toast_id_already_used">Input ID is already used. Please input another ID.</string>
    <string name="toast_username_already_used">Username not available. Please input another username.</string>
    <string name="toast_this_id_can_use">This ID can use.</string>
    <string name="toast_succeed_to_create_new_account">Succeed to create new account. Please login with new account.</string>
    <string name="toast_failed_to_create_new_account">Failed to create new account.</string>
    <string name="you_do_not_have_any_items">You don`t have any fashion items in your list.</string>
    <string name="insert_data_correctly">Please insert data correctly.</string>
    <string name="required_permissions_are_denied">Required permissions are denied.</string>
    <string name="choose_your_stylist">Choose Your Stylist</string>

    <!-- Consultations Details activities text -->
    <string name="consultation_description">Test Test Description</string>
    <string name="nicole_desc">Hi, my name is Nicole and I have worked in a fashion industry for more that 10 years. I have my personal lifestyle blog. I look forward together with you to find your best look! And plan your wardrobe...</string>
    <string name="margareth_desc">Hi, my name is Margareth. I am working as an editor at Vogue magazine Australia. Can not wait to meet you and discuss your wardrobe...</string>
    <string name="jane_desc">Hi, my name is Jane. I am working as an editor at Vogue magazine Australia. Can not wait to meet you and discuss your wardrobe...</string>
    <string name="gabi_desc">Hi, my name is Gabi. I am working as an editor at Vogue magazine Australia. Can not wait to meet you and discuss your wardrobe...</string>
    <string name="wendy_desc">Hi, my name is wendy. I am working as an editor at Vogue magazine Australia. Can not wait to meet you and discuss your wardrobe...</string>
</resources>