<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlannerActivity">

    <Button
        android:id="@+id/today_month_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/button_today_month"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:icon="@drawable/ic_baseline_today_24"
        app:layout_constraintBottom_toBottomOf="@+id/last_month_button"
        app:layout_constraintStart_toEndOf="@+id/last_month_button"
        app:layout_constraintTop_toTopOf="@+id/last_month_button" />

    <Button
        android:id="@+id/last_month_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/button_last_month"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:icon="@drawable/ic_baseline_chevron_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_month_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/button_next_month"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:icon="@drawable/ic_baseline_chevron_right_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/spinner_year"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/next_month_button"
        app:layout_constraintEnd_toStartOf="@+id/next_month_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/month_spinner"
        app:layout_constraintTop_toTopOf="@+id/next_month_button" />

    <Spinner
        android:id="@+id/month_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/spinner_month"
        android:entries="@array/month_name"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/last_month_button"
        app:layout_constraintEnd_toStartOf="@+id/year_spinner"
        app:layout_constraintStart_toEndOf="@id/today_month_button"
        app:layout_constraintTop_toTopOf="@+id/last_month_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/planner_month_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunday_text" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sunday_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/weekday0"
        app:layout_constraintEnd_toStartOf="@+id/monday_text"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/planner_month_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/last_month_button" />

    <TextView
        android:id="@+id/monday_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weekday1"
        app:layout_constraintEnd_toStartOf="@+id/tuesday_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sunday_text"
        app:layout_constraintTop_toTopOf="@+id/sunday_text" />

    <TextView
        android:id="@+id/tuesday_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weekday2"
        app:layout_constraintEnd_toStartOf="@+id/wednesday_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/monday_text"
        app:layout_constraintTop_toTopOf="@+id/monday_text" />

    <TextView
        android:id="@+id/wednesday_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weekday3"
        app:layout_constraintEnd_toStartOf="@+id/thursday_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tuesday_text"
        app:layout_constraintTop_toTopOf="@+id/tuesday_text" />

    <TextView
        android:id="@+id/thursday_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weekday4"
        app:layout_constraintEnd_toStartOf="@+id/friday_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wednesday_text"
        app:layout_constraintTop_toTopOf="@+id/wednesday_text" />

    <TextView
        android:id="@+id/friday_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weekday5"
        app:layout_constraintEnd_toStartOf="@+id/saturday_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/thursday_text"
        app:layout_constraintTop_toTopOf="@+id/thursday_text" />

    <TextView
        android:id="@+id/saturday_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weekday6"
        app:layout_constraintEnd_toEndOf="@+id/planner_month_recycler_view"
        app:layout_constraintStart_toEndOf="@+id/friday_text"
        app:layout_constraintTop_toTopOf="@+id/friday_text" />

</androidx.constraintlayout.widget.ConstraintLayout>