<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userplanner.PlannerDetailActivity">

    <Button
        android:id="@+id/event_confirm_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:visibility="invisible"
        app:icon="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintBottom_toTopOf="@+id/event_outfits_recycler_view"
        app:layout_constraintEnd_toStartOf="@+id/event_delete_button"
        app:layout_constraintTop_toBottomOf="@+id/event_description_input"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:id="@+id/event_cancel_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:visibility="invisible"
        app:icon="@drawable/ic_baseline_cancel_24"
        app:layout_constraintBottom_toTopOf="@+id/event_outfits_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_description_input" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF0F0F0"
        android:text="@string/title_event_fashion_items"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/event_fashion_items_recycler_view"
        app:layout_constraintEnd_toEndOf="@+id/event_fashion_items_recycler_view" />

    <EditText
        android:id="@+id/event_description_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFF0F0F0"
        android:ems="10"
        android:hint="@string/hint_event_description"
        android:inputType="text"
        android:padding="4dp"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF0F0F0"
        android:text="@string/title_event_description"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/event_description_input"
        app:layout_constraintTop_toBottomOf="@+id/event_description_input" />

    <EditText
        android:id="@+id/event_date_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FFF0F0F0"
        android:ems="10"
        android:hint="@string/title_event_date_format"
        android:inputType="none"
        android:longClickable="false"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="@+id/event_description_input"
        app:layout_constraintTop_toBottomOf="@+id/event_description_title" />

    <TextView
        android:id="@+id/event_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF0F0F0"
        android:text="@string/title_event_date"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/event_date_input"
        app:layout_constraintTop_toBottomOf="@+id/event_date_input" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_outfits_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFF0F0F0"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_date_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_fashion_items_recycler_view"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFF0F0F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF0F0F0"
        android:text="@string/title_event_outfits"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/event_outfits_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/event_outfits_recycler_view" />

    <Button
        android:id="@+id/event_delete_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:icon="@drawable/ic_baseline_delete_forever_24"
        app:layout_constraintBottom_toTopOf="@+id/event_outfits_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_description_input" />

    <Button
        android:id="@+id/event_edit_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:icon="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toTopOf="@+id/event_outfits_recycler_view"
        app:layout_constraintEnd_toStartOf="@+id/event_delete_button"
        app:layout_constraintTop_toBottomOf="@+id/event_description_input"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/add_plan_outfit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FBE9B9"
        android:elevation="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/event_outfits_recycler_view"
        app:layout_constraintEnd_toEndOf="@+id/event_outfits_recycler_view"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/add_plan_fashion_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FBE9B9"
        android:elevation="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/event_fashion_items_recycler_view"
        app:layout_constraintEnd_toEndOf="@+id/event_fashion_items_recycler_view"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>